--- a/vignettes/JAGStree.Rmd
+++ b/vignettes/JAGStree.Rmd
@@ -49,7 +49,7 @@ The Bayesian model implied behind this JAGS code is described at length elsewher
 
 ### Examples
 The functionality of the package is best demonstrated using simple trees.  The `AutoWMM` package can also be used to help render and visualize each of these trees:
-```{r}
+```{r, example}
 data <- data.frame("from" = c("Z", "Z", "A", "A"),
                        "to" = c("A", "B", "C", "D"),
                        "Estimate" = c(4, 34, 9, 1),
@@ -62,6 +62,7 @@ data <- data.frame("from" = c("Z", "Z", "A", "A"),
 # optional use of the AutoWMM package to show tree structure
 Sys.setenv("RGL_USE_NULL" = TRUE)
 library(AutoWMM)
+library(DiagrammeR)
 tree <- makeTree(data)
 drawTree(tree)
 ```
