--- a/vignettes/JAGStree.Rmd
+++ b/vignettes/JAGStree.Rmd
@@ -20,14 +20,14 @@ library(JAGStree)
 ```
 
 ## Introduction
-In many real-world applications, individuals or subjects may appear in multiple data sets, setting the stage for the opportunity to synthesize evidence to use all available data for inference. These relational structure of these data sources often admits a graphical representation, where nodes may be represented by data sources and edges representing the relationship between them (e.g., directed edges for subgroupings or representation of time).  One such representation is as a tree (i.e., an acyclical graph with directed edges). Performing inference on this structure can be achieved using MCMC methods to obtain estimates of posterior distributions of a Bayesian hierarchical model.
+In many real-world applications, individuals or subjects may appear in multiple data sets, setting the stage for the opportunity to synthesize evidence to use all available data for inference. These relational structure of these data sources often admits a graphical representation, where nodes may be represented by data sources and edges representing the relationship between them (e.g., directed edges for sub-groupings or representation of time).  One such representation is as a tree (i.e., a cycle-free graph with directed edges). Performing inference on this structure can be achieved using MCMC methods to obtain estimates of posterior distributions of a Bayesian hierarchical model.
 
 This package is geared towards one subset of cases in which this general framework holds [@flynncomp].
 
 
-## makeJAGStree()
+## Making a JAGS Model for Trees
 
-In particular, we assume a number of related data sources exist with a known relational structure described by a tree. We also assume that nodes are associated with integer counts, which are multinomially distributed from the parent node, and branches are associated with a probability, which are Dirichlet distributed among a given sibling group.  Then, given a dataframe representing the tree structure, the `makeJAGStree()` function will generate appropriate MCMC modelling code to be used with JAGS, to run a Bayesian hierarchical model.
+In particular, we assume a number of related data sources exist with a known relational structure described by a tree. We also assume that nodes are associated with integer counts, which are multinomially distributed from the parent node, and branches are associated with a probability, which are Dirichlet distributed among a given sibling group.  Then, given a dataframe representing the tree structure, the `makeJAGStree()` function will generate appropriate MCMC modeling code to be used with JAGS, to run a Bayesian hierarchical model.
 
 The data frame must contain only two columns:
 
